--- a/Mission06_Cameron/appsettings.json
+++ b/Mission06_Cameron/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CollectionConnection": "Data Source = CollectionForms.sqlite"
+    "CollectionConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
  }
